responsive for all sections

--- a/index.html
+++ b/index.html
@@ -164,40 +164,40 @@
       </div>
 
       <!-- Number of reviews and member section -->
-      <div class="stats stats-vertical lg:stats-horizontal shadow mt-20 ml-40 w-9/12">
+      <div class="stats stats-vertical lg:stats-horizontal shadow mt-10 lg:mt-20 lg:ml-40 w-full lg:w-9/12">
         <div class="stat">
-          <div class="stat-title "><i class="fa-regular fa-message ml-5"></i></div>
+          <div class="stat-title "><i class="fa-regular fa-message ml-2 lg:ml-5"></i></div>
           <div class="stat-value text-[#494949]">235+</div>
           <div class="stat-desc text-[#737373]">Happy Client Review</div>
         </div>
 
         <div class="stat">
-          <div class="stat-title"><i class="fa-regular fa-building ml-5"></i></div>
+          <div class="stat-title"><i class="fa-regular fa-building ml-2 lg:ml-5"></i></div>
           <div class="stat-value text-[#494949]">50+</div>
           <div class="stat-desc text-[#737373]">Work Departments</div>
         </div>
 
         <div class="stat">
-          <div class="stat-title"><i class="fa-solid fa-users ml-5"></i></div>
+          <div class="stat-title"><i class="fa-solid fa-users ml-2 lg:ml-5"></i></div>
           <div class="stat-value text-[#494949]">30k+</div>
           <div class="stat-desc text-[#737373]">Our Happy Client</div>
         </div>
         <div class="stat">
-          <div class="stat-title"><i class="fa-solid fa-user-group ml-5"></i>></div>
+          <div class="stat-title"><i class="fa-solid fa-user-group ml-2 lg:ml-5"></i>></div>
           <div class="stat-value text-[#494949]">307+</div>
           <div class="stat-desc text-[#737373]">Staff Members</div>
         </div>
       </div>
 
       <!-- Our work process section -->
-      <div class="mt-20">
-        <button class="btn w-40 rounded-3xl bg-[#FFFFFF]  mb-5 flex justify-center items-center mx-auto"><i
+      <div class="mt-10 lg:mt-20">
+        <button class="btn w-40 rounded-3xl bg-[#FFFFFF] mb-5 flex justify-center items-center mx-auto"><i
             class="fa-solid fa-arrow-right"></i>How we works</button>
-        <h1 class="text-4xl font-bold text-[#212121] text-center mb-5">Our Works Process</h1>
-        <p class="font-medium text-xs text-center  mb-10">The barn house captivates with its blend of rustic charm and
+        <h1 class="text-2xl lg:text-4xl font-bold text-[#212121] text-center mb-5">Our Works Process</h1>
+        <p class="font-medium text-xs text-center mb-10 px-4 lg:px-0">The barn house captivates with its blend of rustic charm and
           modern sophistication, featuring weathered wood, sleek metal accents.</p>
-        <div class="flex gap-x-5 ml-40">
-          <div class="card bg-primary text-primary-content w-64 bg-[#E7C1D3]">
+        <div class="flex flex-col lg:flex-row gap-y-5 lg:gap-x-5 px-4 lg:px-0 lg:ml-40">
+          <div class="card bg-primary text-primary-content w-full lg:w-64 bg-[#E7C1D3]">
             <div class="card-body">
               <img src="./assets/concept.png" alt="" class="w-12">
               <h2 class="card-title text-sm font-extrabold text-[#1C1C1C]">Concept</h2>
@@ -205,7 +205,7 @@
                 modern.</p>
             </div>
           </div>
-          <div class="card bg-primary text-primary-content w-64 bg-[#EFDA6E]">
+          <div class="card bg-primary text-primary-content w-full lg:w-64 bg-[#EFDA6E]">
             <div class="card-body">
               <img src="./assets/flow-chart.png" alt="" class="w-12">
               <h2 class="card-title text-sm font-extrabold text-[#1C1C1C]">Design Process</h2>
@@ -213,7 +213,7 @@
                 modern.</p>
             </div>
           </div>
-          <div class="card bg-primary text-primary-content w-64 bg-[#A4DAC3]">
+          <div class="card bg-primary text-primary-content w-full lg:w-64 bg-[#A4DAC3]">
             <div class="card-body">
               <img src="./assets/vision.png" alt="" class="w-12">
               <h2 class="card-title text-sm font-extrabold text-[#1C1C1C]">Supervision</h2>
@@ -221,7 +221,7 @@
                 modern.</p>
             </div>
           </div>
-          <div class="card bg-primary text-primary-content w-64 bg-[#77AAEA]">
+          <div class="card bg-primary text-primary-content w-full lg:w-64 bg-[#77AAEA]">
             <div class="card-body">
               <img src="./assets/budget-planning.png" alt="" class="w-12">
               <h2 class="card-title text-sm font-extrabold text-[#1C1C1C]">Budget Planning</h2>
@@ -234,27 +234,25 @@
     </section>
 
     <!-- Our latest Portfolio section -->
-    <section class="ml-28 bg-[#FFFFFF]">
-      <button class="btn btn-wide rounded-3xl  bg-[#ABEF5F33]  flex justify-center items-center mx-auto mt-28"><i
+    <section class="px-4 lg:px-28 bg-[#FFFFFF]">
+      <button class="btn btn-wide rounded-3xl bg-[#ABEF5F33] flex justify-center items-center mx-auto mt-10 lg:mt-28"><i
           class="fa-solid fa-arrow-right"></i>Explore our Latest works</button>
       <div class="mb-5">
-        <h1 class="text-[#212121] text-4xl font-bold text-center mt-10">Our Latest Portfolio</h1>
-        <p class="text-[#494949] text-xs font-medium mt-7 text-center">The barn house captivates with its blend of
+        <h1 class="text-[#212121] text-2xl lg:text-4xl font-bold text-center mt-10">Our Latest Portfolio</h1>
+        <p class="text-[#494949] text-xs font-medium mt-3 lg:mt-7 text-center">The barn house captivates with its blend of
           rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
       </div>
-      <div class="grid grid-cols-3 auto-rows-[300px] gap-3 my-10 mt-20">
-          <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-15 ml-20 h-52 col-span-2">
+      <div class="grid grid-cols-1 lg:grid-cols-3 auto-rows-[300px] gap-3 my-10 mt-10 lg:mt-20">
+          <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] h-auto lg:h-52 col-span-1 lg:col-span-2">
             <figure class="ml-5">
-              <img src="./assets/img1.png" alt="" class="w-64 mx-10 mt-5 mb-5">
+              <img src="./assets/img1.png" alt="" class="w-full lg:w-64 mx-10 mt-5 mb-5">
             </figure>
             <div class="card-body ">
-              <h2 class="card-title text-[#494949] font-extrabold text-base -mt-5 ">Commercial</h2>
-              <p class="text-[#737373] text-xs font-medium  mb-5">The barn house captivates with its blend of rustic
+              <h2 class="card-title text-[#494949] font-extrabold text-sm lg:text-base -mt-5">Commercial</h2>
+              <p class="text-[#737373] text-xs font-medium mb-5">The barn house captivates with its blend of rustic
                 charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
-                <div class="flex gap-2 mt-20">
-                  <div class="-mt-20 ">
-                    <p class="text-xl font-extrabold">View Details</p>
-                  </div>
+                <div class="flex gap-2 mt-5 lg:mt-20">
+                    <p class="text-base font-extrabold">View Details</p>
                   <div class="-mt-24">
                     <button class="btn btn-circle size-4.5 bg-[#ABEF5F]">
                       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -266,22 +264,22 @@
                 </div>
             </div>
           </div>
-          <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-80 h-52">
+          <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-full lg:w-80 h-auto lg:h-52">
             <figure class="ml-5">
-              <img src="./assets/img2.png" alt="" class="w-64 ml-2">
+              <img src="./assets/img2.png" alt="" class="w-full lg:w-64 ml-2">
             </figure>
           </div>
-        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-80 h-52 ml-20 -mt-20">
+        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-full lg:w-80 h-auto lg:h-52 -mt-5 lg:ml-20 lg:-mt-20">
           <figure class="ml-5">
-            <img src="./assets/img3.png" alt="" class="w-64 h-40 rounded-xl ml-2 ">
+            <img src="./assets/img3.png" alt="" class="w-full lg:w-64 h-auto lg:h-40 rounded-xl ml-2">
           </figure>
         </div>
-        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] h-52 -ml-7 -mt-20">
+        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-full lg:w-80 h-auto lg:h-52 -ml-0 lg:-ml-7 -mt-5 lg:-mt-20">
           <figure class="ml-5">
-            <img src="./assets/img4.png" alt="" class="w-72 p-10 m-10">
+            <img src="./assets/img4.png" alt="" class="w-full lg:w-72 p-10 m-10">
           </figure>
           <div class="card-body">
-            <h2 class="card-title text-[#494949] font-extrabold text-base">Commercial</h2>
+            <h2 class="card-title text-[#494949] font-extrabold text-sm lg:text-base">Commercial</h2>
             <p class="text-[#737373] text-xs font-medium mt-3 mb-3">The barn house captivates with its blend of rustic
               charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
             <p>View Details</p>
@@ -293,23 +291,23 @@
             </button>
           </div>
         </div>
-        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-80 h-52 -mt-20">
+        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-full lg:w-80 h-auto lg:h-52 -ml-0 lg:-ml-7 -mt-5 lg:-mt-20">
           <figure class="ml-5">
-            <img src="./assets/img5.png" alt="" class="w-64 h-40 rounded-xl ml-2">
+            <img src="./assets/img5.png" alt="" class="w-full lg:w-72 p-10 m-10">
           </figure>
         </div>
       </div>
+    </section>
 
       <!-- Read our article and news section -->
-    </section>
-    <section class="bg-base-200 mt-10 w-screen pt-10">
-      <button class="btn btn-wide rounded-3xl  bg-[#ABEF5F33]  flex justify-center items-center mx-auto mt-10"><i
+    <section class="bg-base-200 mt-10 w-full pt-10">
+      <button class="btn btn-wide rounded-3xl bg-[#ABEF5F33] flex justify-center items-center mx-auto mt-10"><i
           class="fa-solid fa-arrow-right"></i>Rinterio News</button>
       <h1 class="text-[#212121] text-4xl font-bold text-center mt-5">Read Our Articles and News</h1>
       <p class="text-[#494949] text-xs font-medium text-center mt-3">The barn house captivates with its blend of rustic
         charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
-      <div class="flex space-x-5 ml-28 mt-10 pb-10">
-        <div class="card bg-base-100 w-96 shadow-xl">
+      <div class="flex flex-col md:flex-row md:space-x-5 md:ml-10 mt-10 pb-10 items-center justify-center">
+        <div class="card bg-base-100 w-80 md:w-96 shadow-xl mb-5 md:mb-0">
           <figure>
             <img src="./assets/article1.png" alt="" class="w-80 mt-5">
           </figure>
@@ -337,7 +335,7 @@
             </button>
           </div>
         </div>
-        <div class="card bg-base-100 w-96 shadow-xl">
+        <div class="card bg-base-100 w-80 md:w-96 shadow-xl mb-5 md:mb-0">
           <figure>
             <img src="./assets/article2.png" alt="" class="w-80 mt-5">
           </figure>
@@ -365,7 +363,7 @@
             </button>
           </div>
         </div>
-        <div class="card bg-base-100 w-96 shadow-xl">
+        <div class="card bg-base-100 w-80 md:w-96 shadow-xl mb-5 md:mb-0">
           <figure>
             <img src="./assets/article3.png" alt="" class="w-80 mt-5">
           </figure>
@@ -397,56 +395,56 @@
     </section>
 
     <!-- Lets connect section -->
-    <section class=" mt-10 w-screen ">
+    <section class=" mt-10 w-full ">
     <div class="bg-cover pt-20 pb-20"style="background-image: url('./assets/bg.jpg');">
-      <button class="btn btn-wide rounded-3xl  bg-[#ABEF5F33]  flex justify-center items-center mx-auto"><i
+      <button class="btn btn-wide rounded-3xl bg-[#ABEF5F33] flex justify-center items-center mx-auto"><i
         class="fa-solid fa-arrow-right"></i>Let’s Connect</button>
         <h1 class="text-[#212121] text-4xl font-bold text-center mt-5">Let’s Discuss Next Project</h1>
         <p class="text-[#494949] font-medium text-xs text-center mt-3">The barn house captivates with its blend of rustic charm and modern 
           sophistication, featuring weathered wood, sleek metal accents.</p>
-          <div class="flex ml-64 gap-4 mt-5">
-            <label class="block w-2/5 mb-5 ">
+          <div class="flex flex-col md:flex-row md:ml-10 gap-4 mt-5 items-center justify-center">
+            <label class="block w-4/5 md:w-2/5 mb-5">
               <input type="email" name="email" class="mt-1 px-3 py-2 bg-white border shadow-sm border-slate-300 placeholder-slate-400 focus:outline-none focus:border-sky-500 focus:ring-sky-500 block w-full rounded-full sm:text-sm focus:ring-1" placeholder="First Name*" />
             </label>
-            <label class="block w-2/5">
+            <label class="block w-4/5 md:w-2/5 mb-5">
               <input type="email" name="email" class="mt-1 px-3 py-2 bg-white border shadow-sm border-slate-300 placeholder-slate-400 focus:outline-none focus:border-sky-500 focus:ring-sky-500 block w-full rounded-full sm:text-sm focus:ring-1" placeholder="Last Name*" />
             </label>
           </div>
-          <div class="flex ml-64 gap-4">
-            <label class="block w-2/5">
+          <div class="flex flex-col md:flex-row md:ml-10 gap-4 items-center justify-center">
+            <label class="block w-4/5 md:w-2/5 mb-5">
               <input type="email" name="email" class="mt-1 px-3 py-2 bg-white border shadow-sm border-slate-300 placeholder-slate-400 focus:outline-none focus:border-sky-500 focus:ring-sky-500 block w-full rounded-full sm:text-sm focus:ring-1" placeholder="Phone Number*" />
             </label>
-            <label class="block w-2/5">
+            <label class="block w-4/5 md:w-2/5 mb-5">
               <input type="email" name="email" class="mt-1 px-3 py-2 bg-white border shadow-sm border-slate-300 placeholder-slate-400 focus:outline-none focus:border-sky-500 focus:ring-sky-500 block w-full rounded-full sm:text-sm focus:ring-1" placeholder="Email Number*" />
             </label>
           </div>
-        <label class="form-control w-2/3 ml-64 mt-5 ">
+        <label class="form-control w-4/5 md:w-2/3 mx-auto mt-5">
           <textarea class="textarea textarea-bordered h-32 rounded-md" placeholder="Write your message here"></textarea>
         </label>
         <input
-  type="text"
-  placeholder="" 
-  class="input input-bordered input-xs w-2/3 h-14  rounded-full mt-3 ml-64 bg-[#ABEF5F]" />
-  <div class="flex items-center justify-center -mt-14 gap-2 ">
-    <div class="pt-1 font-extrabold text-sm">
-      <p class="text-center">Send Mail</p>
-    </div>
-    <div class="pt-1">
-      <button class="btn btn-circle bg-black text-white ">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-          stroke="currentColor" class="size-6">
-          <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
-        </svg>
-      </button>
-    </div>
-  </div>
-    </div>
+        type="text"
+        placeholder="" 
+        class="input input-bordered input-xs w-2/3 h-14  rounded-full mt-3 ml-14 md:ml-32 lg:ml-40 xl:ml-56 bg-[#ABEF5F]" />
+        <div class="flex items-center justify-center -mt-14 gap-2 ">
+          <div class="pt-1 font-extrabold text-sm">
+            <p class="text-center">Send Mail</p>
+          </div>
+          <div class="pt-1">
+            <button class="btn btn-circle bg-black text-white ">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+              </svg>
+            </button>
+          </div>
+        </div>
+          </div>
     </section>
   </main>
 
   <!-- Creating footer section -->
-    <footer class="footer footer-center bg-[#1C1C1C] text-base-content rounded w-screen pt-24">
-      <div class="flex items-center justify-center -mt-14 gap-2 ">
+    <footer class="footer footer-center bg-[#1C1C1C] text-base-content rounded w-96 md:w-full ml-5 md:ml-0 pt-24">
+      <div class="flex flex-row md:flex-row items-center justify-center gap-2 md:gap-4">
         <div class="pt-1">
           <button class="btn btn-circle size-4.5 bg-[#ABEF5F] ">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -460,17 +458,18 @@
         </div>
       </div>
       <p class="text-[#737373] text-base font-medium text-center -mt-5">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
-      <nav class="grid grid-flow-col gap-20 text-[#E9E9E9]">
+      <nav class="grid grid-cols-1 md:grid-cols-5 gap-5 md:gap-20 text-[#E9E9E9] mt-5">
         <a class="link link-hover">Home</a>
         <a class="link link-hover">Services</a>
         <a class="link link-hover">Portfolio</a>
         <a class="link link-hover">Blogs</a>
         <a class="link link-hover">Contact Us</a>
       </nav>
-      <div class="navbar-center flex pb-10">
+      <div class="flex flex-col md:flex-row items-center justify-center pb-10 mt-5">
         <div>
           <button class="btn btn-wide rounded-3xl bg-[#ABEF5F]">Book Consult</button>
         </div>
+
         <div class="-ml-5">
           <button class="btn btn-circle bg-black text-white -ml-20">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
