--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           </div>
         </div>
         <div class="hero-content flex-col lg:flex-row-reverse md:mr-36 mt-10 -mb-3">
-          <img src="./assets/Rectangle.png" class="max-w-sm rounded-lg shadow-2xl w-full md:w-96 h-full">
+          <img src="./assets/Rectangle.png" class="max-w-sm rounded-lg shadow-2xl w-full md:w-96 md:-ml-40  h-full">
         </div>
       </div>
 
