--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </svg>
           </button>
         </div>
-        <div class="dropdown lg:hidden">
+        <div class="dropdown lg:hidden ml-28">
           <div tabindex="0" role="button" class="btn bg-white btn-circle">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
               stroke="currentColor">
@@ -117,8 +117,8 @@
       <p class="text-[#494949] mb-7 text-sm md:text-base">The barn house captivates with its blend of rustic charm and modern sophistication,
         featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
       <div class="navbar-center flex flex-col md:flex-row justify-center gap-5 md:gap-0">
-        <button class="btn btn-wide rounded-3xl bg-[#ABEF5F80]">View Details</button>
-        <button class="btn btn-circle size-4.5 bg-[#ABEF5F]  md:-ml-20 ">
+        <button class="btn btn-wide rounded-3xl bg-[#ABEF5F80] pb-2 lg:pb-0 ml-28 md:ml-0">View Details</button>
+        <button class="btn btn-circle size-4.5 bg-[#ABEF5F] ml-72  -mt-16 md:mt-0 md:-ml-20 ">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
             stroke="currentColor" class="size-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
@@ -243,18 +243,18 @@
           rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
       </div>
       <div class="grid grid-cols-1 lg:grid-cols-3 auto-rows-[300px] gap-3 my-10 mt-10 lg:mt-20">
-          <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] h-auto ml-20 lg:h-52 col-span-1 lg:col-span-2">
-            <figure class="ml-5">
-              <img src="./assets/img1.png" alt="" class="w-full lg:w-72 mx-10 md:mt-5 mb-5">
+          <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] h-auto ml-10 md:ml-20 lg:h-52 col-span-1 lg:col-span-2">
+            <figure class="pr-20 md:pr-0 ml-5">
+              <img src="./assets/img1.png" alt="" class="w-96 lg:w-72 h-28 md:h-auto ml-96 md:mx-10 -mt-28 md:mt-5 mb-5 pr-60 md:pr-0">
             </figure>
             <div class="card-body ">
-              <h2 class="card-title text-[#494949] font-extrabold text-sm lg:text-base mt-28 md:-mt-5">Commercial</h2>
-              <p class="text-[#737373] text-xs font-medium mb-5">The barn house captivates with its blend of rustic
+              <h2 class="card-title text-[#494949] font-extrabold text-sm lg:text-base mt-32 -ml-48 md:ml-0 md:-mt-5">Commercial</h2>
+              <p class="text-[#737373] text-xs font-medium mb-5 h-20 -ml-48 md:ml-0">The barn house captivates with its blend of rustic
                 charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
                 <div class="flex gap-2 mt-5 lg:mt-20">
-                    <p class="text-base font-extrabold md:-mt-20 gap-2">View Details</p>
+                    <p class="text-base font-extrabold -mt-10 md:-mt-20 gap-2 -ml-48 md:ml-0">View Details</p>
                   <div class="-mt-24">
-                    <button class="btn btn-circle size-4.5 bg-[#ABEF5F] md:-ml-80">
+                    <button class="btn btn-circle size-4.5 bg-[#ABEF5F] -ml-40 md:-ml-80 mt-10 md:mt-0">
                       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="size-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
@@ -264,26 +264,26 @@
                 </div>
             </div>
           </div>
-          <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-full lg:w-80 h-auto lg:h-52">
-            <figure class="ml-5">
-              <img src="./assets/img2.png" alt="" class="w-full lg:w-64 ml-2">
+          <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-80 lg:w-80 h-60 lg:h-52 ml-10 md:ml-0">
+            <figure class="ml-5 my-3 md:my-0">
+              <img src="./assets/img2.png" alt="" class="w-72 lg:w-64 h-auto rounded-xl -ml-2 md:ml-2">
             </figure>
           </div>
-        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-full lg:w-80 h-auto lg:h-52 -mt-5 lg:ml-20 lg:-mt-20">
-          <figure class="ml-5">
-            <img src="./assets/img3.png" alt="" class="w-full lg:w-64 h-auto lg:h-40 rounded-xl ml-2">
+        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-80 lg:w-80 h-60 lg:h-52 -mt-14 ml-10 lg:ml-20 lg:-mt-20">
+          <figure class="ml-5 my-5 md:my-0">
+            <img src="./assets/img3.png" alt="" class="w-72 lg:w-64 h-auto rounded-xl -ml-2 md:ml-2">
           </figure>
         </div>
-        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-full lg:w-96 h-auto lg:h-52 -ml-0 lg:ml-2  -mt-5 lg:-mt-20">
-          <figure class="ml-5">
-            <img src="./assets/img4.png" alt="" class="w-full lg:w-80 p-10 m-10">
+        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] h-96 md:h-52 -mt-28 md:-mt-20 ml-10 md:ml-0">
+          <figure class="pr-20 md:pr-0 -mt-16 md:mt-0 ml-5">
+            <img src="./assets/img4.png" alt="" class="w-96 lg:w-72 h-28 md:h-auto ml-96 md:mx-10 -mt-28 md:mt-5 mb-5 pr-60 md:pr-0">
           </figure>
           <div class="card-body">
-            <h2 class="card-title text-[#494949] font-extrabold text-sm lg:text-base">Commercial</h2>
-            <p class="text-[#737373] text-xs font-medium mt-3 mb-3">The barn house captivates with its blend of rustic
+            <h2 class="card-title text-[#494949] font-extrabold text-sm lg:text-base mt-36 -ml-36 md:ml-0 md:-mt-5">Commercial</h2>
+            <p class="text-[#737373] text-xs font-medium mt-3 mb-3 -ml-36 md:ml-0">The barn house captivates with its blend of rustic
               charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
-            <p>View Details</p>
-            <button class="btn btn-circle size-4.5 bg-[#ABEF5F] ml-24 -mt-10">
+            <p class="-ml-36 md:ml-0 -mt-20 md:mt-0 text-[#212121] font-extrabold">View Details</p>
+            <button class="btn btn-circle size-4.5 bg-[#ABEF5F] -ml-10 md:ml-24 -mt-36 md:-mt-10">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                 stroke="currentColor" class="size-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
@@ -291,16 +291,17 @@
             </button>
           </div>
         </div>
-        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-full lg:w-80 h-auto lg:h-52 -ml-0  -mt-5 lg:-mt-20">
+        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-80 h-52 -mt-5 md:-mt-20 ml-10 md:ml-0">
           <figure class="ml-5">
-            <img src="./assets/img5.png" alt="" class="w-full lg:w-80 p-10 m-10">
+            <img src="./assets/img5.png" alt="" class="w-64 h-40 rounded-xl ml-2">
           </figure>
         </div>
+      </div>
       </div>
     </section>
 
     <!-- Our house collection section -->
-     <h1 class="text-5xl font-extrabold text-center mb-3">Our house collection</h1>
+     <h1 class=" text-3xl md:text-5xl font-extrabold text-center mb-3">Our house collection</h1>
      <p class="text-base font-bold text-gray-500 text-center mb-10">This section describes our working capabilities to design all those beautiful houses and this also shows our efficiency.</p>
     <div class="carousel w-full">
       <div id="slide1" class="carousel-item relative w-full">
@@ -486,7 +487,7 @@
   </main>
 
   <!-- Creating footer section -->
-    <footer class="footer footer-center bg-[#1C1C1C] text-base-content rounded w-96 md:w-full ml-5 md:ml-0 pt-24">
+    <footer class="footer footer-center bg-[#1C1C1C] text-base-content rounded w-auto  md:w-full mx-5 md:mx-0 pt-24 ">
       <div class="flex flex-row md:flex-row items-center justify-center gap-2 md:gap-4">
         <div class="pt-1">
           <button class="btn btn-circle size-4.5 bg-[#ABEF5F] ">
@@ -514,7 +515,7 @@
         </div>
 
         <div class="-ml-5">
-          <button class="btn btn-circle bg-black text-white -ml-20">
+          <button class="btn btn-circle bg-black text-white md:-ml-20 ml-36 md:mt-0 -mt-72">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
               stroke="currentColor" class="size-6">
               <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
